--- a/settings.ini
+++ b/settings.ini
@@ -9,7 +9,7 @@ version = 0.0.2
 
 ### OPTIONAL ###
 
-requirements = python-dotenv fastcore web3 networkx
+requirements = python-dotenv fastcore web3 networkx requests
 # dev_requirements = 
 # console_scripts =
 
