--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include settings.ini
 include LICENSE
 include CONTRIBUTING.md
 include README.md
-include abis/*.json
+include sugar/abis/*.json
 recursive-exclude * __pycache__
