--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -33,16 +33,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Python dependencies
         run: |
-          pip install python-dotenv
+          pip install pyyaml python-dotenv
       - name: Install supersim
         run: brew install ethereum-optimism/tap/supersim
       - name: Confirm supersim is installed
         run: supersim --version
       - name: Fork
         run: |
-          python supersim.py
+          python supersim.py > /dev/null 2>&1 &
           sleep 15
-      #> /dev/null 2>&1 &
       - name: Test fork
         run: cast call 0x7F6D3A4c8a1111DDbFe282794f4D608aB7Cb23A2 "MAX_TOKENS()(uint256)" --rpc-url http://localhost:4444
       - uses: fastai/workflows/nbdev-ci@master
